edition = "2023";

package protobuf;

option features.field_presence = EXPLICIT;

message MovieRatingCount {
    int32 id = 1;
    string title = 2;
    float partial_sum = 3;
    int32 count = 4;
}

message MovieRatingCounts {
    repeated MovieRatingCount list = 1;
}